# TSU-ToDS-first

./: CMakeLists.txt  console_output.cpp  console_output.h  consoleoutput.cpp  consoleoutput.h  file.cpp  file.cpp.autosave  file.h  file.h.autosave  fileinfo.cpp  fileinfo.h  filetracker.cpp  filetracker.h  main.cpp
